# pell-solution

./: .gitignore  Cargo.toml  README.md
benches/: pell_benchmarks.rs
examples/: basic_usage.rs  mathematical_analysis.rs  performance_analysis.rs  solve_991_puzzle.rs  streaming_solutions.rs
src/: error.rs  lib.rs  main.rs  solver.rs  utils.rs
tests/: error_tests.rs  integration_tests.rs  iterator_tests.rs  solver_tests.rs  utils_extended_tests.rs  utils_tests.rs
