# Cargo.toml
[package]
name = "pell991"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Rust library for solving Pell equations"
license = "MIT"
repository = "https://github.com/yourusername/pell991"
keywords = ["mathematics", "number-theory", "pell-equation", "continued-fractions"]
categories = ["mathematics", "algorithms"]

[lib]
name = "pell991"
path = "src/lib.rs"

[[bin]]
name = "pell991"
path = "src/main.rs"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"


