# Cargo.toml
[package]
name = "pell991"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Solve the 991 Pell Puzzle: Find when √(991·n² + 1) becomes a perfect integer"
license = "MIT"
repository = "https://github.com/PaulShpilsher/pell-solution"
keywords = ["mathematics", "number-theory", "pell-equation", "continued-fractions"]
categories = ["mathematics", "algorithms"]

[lib]
name = "pell991"
path = "src/lib.rs"

[[bin]]
name = "pell991"
path = "src/main.rs"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pell_benchmarks"
harness = false


